feat: 선수 도메인 및 상세/요약 응답 구조 추가